# somelang

./: CHANGELOG.md  LICENSE  README.md  poc.cabal  specs
src-exe/: Common.hs  Expr.hs  Main.hs  Parser.hs  Stmt.hs
