cabal-version:      3.4
name:               poc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Augusto Pieper
maintainer:         augusto@hatejs.dev
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable poc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser, Expr, Stmt, Common
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0, attoparsec, text
    hs-source-dirs:   src-exe
    default-language: GHC2021
